--- a/projetin/docker-compose.yml
+++ b/projetin/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     command: >
       /bin/sh -c "python3 manage.py makemigrations &&
                   python3 manage.py migrate &&
-                  python3 manage.py populate_tags &&
+                  python3 manage.py iniciar &&
                   python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/projetin
